docs: 更新仓库协作指南